syntax = "proto3";

package spec;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";


message KV {
        string key = 1;
        string value = 2;
}

message TrackExperiment {
        string name = 1;
        int32 variant = 2;
        fixed64 first_tracked_at_ns  = 3;
        repeated KV properties = 4 [(gogoproto.nullable) = false];

        string foreign_id = 9;
        string foreign_type = 10;
        fixed32 origin = 11;
}

message Metadata {
        repeated KV search = 1 [(gogoproto.nullable) = false];
        repeated KV count = 2 [(gogoproto.nullable) = false];
        repeated KV properties = 3 [(gogoproto.nullable) = false];

        fixed64 created_at_ns  = 5;

        string event_type = 7;
        string foreign_id = 9;
        string foreign_type = 10;
}

message Context {
        repeated KV properties = 2 [(gogoproto.nullable) = false];
        fixed64 created_at_ns  = 5;

        string foreign_id = 6;
        string foreign_type = 7;
}

message Envelope {
        Metadata metadata = 1;
        bytes payload = 2;
}
